# glacier-mail

./: .gitignore  CMakeLists.txt  glacier-mail.desktop  glacier-mail.pro
emailnotificationd/: CMakeLists.txt  main.cpp  notificationapp.cpp  notificationapp.h
rpm/: glacier-mail.spec
src/: CMakeLists.txt  main.cpp  src.pro
src/qml/: AccountPage.qml  AddAttachmentToolbar.qml  AddAttachmentView.qml  AttachmentDownloadDialog.qml  AttachmentPicker.qml  AttachmentPill.qml  AttachmentView.qml  ComposerSheet.qml  ComposerViewToolbar.qml  ConfirmDeleteDialog.qml  EmailAddress.qml  EmailHeader.qml  EmailRecipientEntry.qml  FolderListMenu.qml  FolderListView.qml  FolderListViewToolbar.qml  FolderSelectionDialog.qml  MessageContextMenu.qml  ReadingView.qml  ReadingViewBottomBar.qml  ReadingViewToolbar.qml  SortFilter.qml  SyncErrorDialog.qml  glacier-mail.qml  glacier-mail.qrc
src/qml/settings/: AccountExpandobox.qml  AccountSettings.qml  ControlGroup.qml  DetailsScreen.qml  DropDownControl.qml  EmailSettings.qml  InlineNotification.qml  ManualScreen.qml  PasswordControl.qml  RegisterScreen.qml  TextControl.qml  WelcomeButtons.qml  WelcomeScreen.qml
translations/: glacier-mail.ts  glacier-mail_cs.ts  glacier-mail_de.ts  glacier-mail_pl.ts
